Writing several output files at the same time is enabled